--- RELEASE-13.06 --- Italian Stallion Release ---

This is the first official OpenPilot Revolution software release. This version
also supports the CopterControl, CC3D, OPLinkMini and the upcoming OP OSD.
There a number of significant backend changes in this version compared to
previous software releases: from new toolchains and build system to a source
code reformatting that is inline with our project style guidelines.

The goal of this release is to provide CC3D-style features for the new
Revolution platform (using the Revo's internal modem and external OPLinkMini
board). Advanced features such as Altitude Hold, Position Hold, Guidance,
Return to Home, and AutoLanding are still in development and will be available
in future releases. The availability of those features will depend on how many
people are able to contribute with code, testing and documentation.

Remember that the first Revo hardware batch was intended for developers/
bleeding-edge testers, not end users who want a 100% final platform.

- New bootloaders are REQUIRED for this release to support new features such
  as erase settings and others. As always, bootloaders can be updated without
  any special programmer hardware using the bootloader updater firmware files.
- F1 boards (CC, CC3D, OPLinkMini) require bootloader version 4 or higher.
- F4 boards (Revolution, OSD prototype) require bootloader version 5 or higher.
- Check the wiki for details of how to update them:
  http://wiki.openpilot.org/display/BUILDS/Bootloader+update

Please remember to take a moment to view these important tutorials:
  http://wiki.openpilot.org/display/Doc/OpenPilot+Tutorials

What's New / Release Notes
--------------------------

NEW:

- Firmware folders removed.
  The firmware files folder has been removed in this release. These files
  are now integrated into the GCS so they are always up to date and there is
  less risk of a firmware mismatch. To update your firmware you must use